Corrected wrong change
The message "Refactoring to maintanability" did appear too closed to the right as I removed by mistake the margin on the .message. It has been put back again.

--- a/stylesheets/maintheme.css
+++ b/stylesheets/maintheme.css
@@ -33,6 +33,7 @@ body {
 	display:inline-block;
 	vertical-align: middle;
 	float:right;
+	margin: 10px;
 }
 
 .title {
